--- a/_posts/2025-09-03-Day-2.md
+++ b/_posts/2025-09-03-Day-2.md
@@ -2,40 +2,58 @@
 layout: post
 title: "Day 2: Building the Foundation & Launching My Blog"
 date: 2025-09-03 23:49:30 +0000
+categories: [devops, daily-log, linux]
+tags: [linux, networking, ssh, git, jekyll, blog-setup]
 ---
 
-# 🛠️ Day 2: Building the Foundation & Launching My Blog
+# Day 2: Building the Foundation & Launching My Blog
 
-Today, I officially kicked off Week 1 of my DevOps roadmap: **Linux Fundamentals & Networking Basics**. As expected, Linux is at the heart of everything in the cloud and DevOps world. Even though I’m already comfortable with Linux thanks to my 42 background, I dedicated time to reviewing core concepts and sharpening my skills.
+**Week 1 Focus**: Linux Fundamentals & Networking Basics
 
-One of my main achievements today was setting up this GitHub blog! I wanted a place to document my daily progress, share resources, and showcase my journey. Creating the blog itself was a great exercise in using Git, GitHub, and Jekyll.
+---
 
-I also spent a good amount of time revisiting essential topics like networking, SSH, and advanced Git workflows. These are the building blocks for any DevOps engineer, and it felt great to reinforce my understanding.
+## 🎯 Today's Objective
 
-## Week 1 Focus: Linux & Networking
+Get this GitHub Pages blog fully operational and dive back into Linux fundamentals. Even though I have solid Linux experience from 42 School, I want to review and strengthen the DevOps-specific aspects that will be crucial for the weeks ahead.
 
-**Learning Objectives:**
-- Master the Linux CLI for daily DevOps tasks
-- Understand networking fundamentals
-- Set up a robust development environment
+## ✅ What I Accomplished
 
-**Technical Skills:**
-- Linux: File system, permissions, processes, systemd, cron jobs
-- Networking: TCP/IP, DNS, subnets, ports, firewalls basics
-- SSH: Key management, config files, tunneling
-- Git: Advanced workflows, branching strategies, PR reviews
+**Blog Infrastructure Complete**: Successfully set up this GitHub Pages blog using Jekyll. The entire process was a great refresher on Git workflows, static site generators, and automated deployment pipelines.
 
-**Hands-on Practice:**
-- Set up Ubuntu/CentOS VM or WSL2
-- Practiced 50+ CLI commands daily
-- Configured SSH keys for GitHub
-- Created a personal Git workflow template
+**Linux Foundation Review**: Spent quality time revisiting core Linux concepts with a DevOps lens, focusing on system administration tasks I'll need for container orchestration and cloud deployments.
 
-**Deliverables:**
-- Personal cheat sheet (Linux commands + networking concepts)
-- GitHub repo with Git workflow documentation
+**Development Environment Optimization**: Fine-tuned my workspace for the 12-week journey ahead, ensuring all tools and workflows are properly configured.
 
-**Study Resources:**
-- Linux Academy / A Cloud Guru Linux courses
-- "The Linux Command Line" (free online)
-- Practice on overthewire.org
+**Key Deliverables:**
+- Fully functional GitHub Pages blog with custom Jekyll configuration
+- Refreshed understanding of Linux file systems, permissions, and process management
+- Documented Week 1 learning objectives and technical skill targets
+- SSH key configuration verified and secured for GitHub integration
+
+## 🧗 Challenges & Struggles
+
+**Jekyll Learning Curve**: Had to brush up on Liquid templating and Jekyll's directory structure. The documentation is comprehensive but took some time to navigate effectively.
+
+**Scope Management**: Caught myself wanting to perfect every detail of the blog setup instead of focusing on content creation. Had to remind myself that consistent progress beats perfect presentation.
+
+## 📚 Key Learnings & Progress
+
+**Technical Skills Gained:**
+- Jekyll static site generation and GitHub Pages deployment workflow
+- Advanced Git branching strategies for documentation and code management
+- Linux systemd service management and process monitoring techniques
+- SSH tunneling and advanced key management for secure remote access
+
+**DevOps Connections**: Started seeing how foundational Linux skills directly connect to container management, infrastructure automation, and cloud operations. The investment in solid fundamentals will pay off in later weeks.
+
+## 🔄 Daily Reflection
+
+Great momentum today. The blog setup took longer than anticipated, but it's a crucial tool for accountability and documentation. My Linux review reinforced how much I've retained from 42 School while highlighting areas where DevOps-specific knowledge will build on this foundation.
+
+Energy level is high, and I'm genuinely excited about the technical depth coming in the following days.
+
+## ⏭️ Tomorrow's Plan
+
+Deep dive into shell command mastery with a focus on the most critical commands for DevOps workflows. I'm planning to create a comprehensive reference document that will serve as a quick-access resource throughout the entire 12-week journey.
+
+Time to get my hands dirty with some serious command-line work! 💻
