--- a/_posts/2025-09-08-Day-5.md
+++ b/_posts/2025-09-08-Day-5.md
@@ -2,28 +2,60 @@
 layout: post
 title: "Day 5: Rebuilding Born2BeRoot—Upgrading My Linux Server Skills"
 date: 2025-09-08 20:00:00 +0000
+categories: [devops, daily-log, linux, server-administration]
+tags: [debian, virtualbox, server-hardening, wordpress, system-administration]
 ---
 
-# 🏗️ Day 5: Rebuilding Born2BeRoot—Upgrading My Linux Server Skills
+# Day 5: Rebuilding Born2BeRoot—Upgrading My Linux Server Skills
 
-Today, I took a big step forward in my DevOps journey by creating a brand new Debian virtual machine on VirtualBox. This wasn’t just any VM setup—it’s a full remake and upgrade of the classic "Born2BeRoot" project from my 42 days. The goal? Transform a fresh Linux VM into a robust, secure, and fully monitored server environment.
+**Week 1 Focus**: Linux Fundamentals & Networking Basics
 
-## Project Goals & Motivation
+---
 
-Having become pretty comfortable with Linux after finishing the 42 core curriculum, I wanted to push myself further. This time, I’m not just repeating the basics—I’m aiming to master every aspect, from initial setup to advanced server configuration, and tackle all the bonus challenges.
+## 🎯 Today's Objective
 
-## What I Set Up Today
-- **Debian VM on VirtualBox**: Clean install, updated, and ready for action.
-- **System Hardening**: Configured UFW firewall, SSH access, and essential security settings.
-- **Monitoring**: Set up basic monitoring tools to keep an eye on system health and performance.
+Transform a fresh Debian VM into a secure, production-ready server environment. This isn't just a repeat of the 42 School project - it's an upgraded version that incorporates real-world DevOps practices and security hardening.
 
-## The Bonus Challenge
-For the bonus part of the project, I’m going all in:
-- **WordPress Website**: Deployed a fully functional WordPress site using lighttpd, MariaDB, and PHP
-- **Custom Service**: I’ll also set up an additional service of my choice that I find useful for a real-world server (excluding NGINX/Apache2, of course).
+## ✅ What I Accomplished
 
-## Reflection
+**Production-Grade VM Setup**: Created a clean Debian installation on VirtualBox with proper resource allocation and network configuration optimized for server workloads.
 
-Revisiting and upgrading this project is a great way to consolidate my Linux knowledge and take my server administration skills to the next level. I’m excited to document every step, share the challenges I face, and show how much progress is possible with focused effort and a willingness to go beyond the basics.
+**Security Hardening Implementation**: Applied comprehensive security measures including firewall configuration, SSH hardening, and system monitoring setup.
 
-Stay tuned for more updates as I dive deeper into server setup, automation, and real-world DevOps scenarios!
+**Web Service Deployment**: Successfully deployed a complete WordPress stack using lighttpd, MariaDB, and PHP - demonstrating full-stack server administration capabilities.
+
+**Key Deliverables:**
+- Hardened Debian server with UFW firewall and secure SSH configuration
+- Fully functional WordPress website with optimized LAMP stack alternative
+- System monitoring tools configured for performance and security tracking
+- Documented server setup process with security best practices
+
+## 🧗 Challenges & Struggles
+
+**Service Integration Complexity**: Getting lighttpd, MariaDB, and PHP to work together smoothly required careful configuration and troubleshooting. Each service had specific requirements that needed to be coordinated.
+
+**Security vs. Usability Balance**: Finding the right balance between tight security and functional accessibility. Some security measures initially broke functionality, requiring iterative adjustment.
+
+**Performance Optimization**: The VM environment required careful resource management to ensure responsive performance while running multiple services simultaneously.
+
+## 📚 Key Learnings & Progress
+
+**Technical Skills Gained:**
+- Advanced Debian system administration and package management
+- Web server security hardening with UFW firewall rules and SSH key authentication
+- LAMP stack deployment and optimization (lighttpd variant)
+- System service management with systemd for reliable service orchestration
+
+**DevOps Mindset Development**: Started thinking like a systems administrator who needs to balance security, performance, and maintainability - crucial skills for infrastructure management.
+
+## 🔄 Daily Reflection
+
+This felt like a significant step up from basic command-line work. Managing multiple interacting services and ensuring they're secure and performant requires a different level of thinking. 
+
+The WordPress deployment was particularly satisfying - seeing a complete application stack come together on infrastructure I built and hardened myself.
+
+## ⏭️ Tomorrow's Plan
+
+Deep dive into networking fundamentals and system internals. I want to strengthen my understanding of how data flows through networks, how Linux manages system resources, and how to troubleshoot complex system issues.
+
+Time to master the foundational knowledge that makes advanced DevOps work possible! 🛡️
