--- a/_posts/2025-09-10-Day-7.md
+++ b/_posts/2025-09-10-Day-7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Building My Personal DevOps Lab—A Fresh Start for Old Hardware"
+title: "Simple DevOps Lab"
 date: 2025-09-10 20:00:00 +0000
 categories: [devops, home-lab, hardware]
 tags: [debian, hardware-repurpose, home-lab, multi-machine-setup, infrastructure]
